# influxdb-compute-api

./: .editorconfig  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  tests.yml  vulnerability-scan.yml
integration/: docker-compose.yml  performance_data.txt  smoke_test.sh  test.hurl  timeline_data.txt
integration/config-api/: Dockerfile  check.ts  config.js  config.json  main.ts  package.json
src/: channel.rs  config_api.rs  headers.rs  http_api.rs  influxdb.rs  main.rs  model.rs  performance.flux  production_objective.rs  time.rs  timeline.flux
