[package]
name = "influxdb-compute-api"
version = "2.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum-extra = { version = "0.10", features = [ "typed-header" ] }
bytes = "1.5"
chrono-tz = "0.10"
clap-verbosity-flag = { version = "3.0", features = [ "tracing" ] }
csv-async = "1.2"
futures-util = { version = "0.3", features = [ "io" ] }
humantime = "2.1"
mime = "0.3"
rmp-serde = "1.1"
serde = { version = "1.0", features = [ "derive" ] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
tokio-util = "0.7"
tracing = "0.1"
url = "2.4"

[dependencies.axum]
version = "0.7"
default-features = false
features = [ "json", "http1", "tokio" ]

[dependencies.chrono]
version = "0.4"
default-features = false
features = [ "clock", "serde", "std" ]

[dependencies.clap]
version = "4.4"
default-features = false
features = [ "std", "help", "usage", "error-context", "derive", "env" ]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = [ "gzip", "json", "stream" ]

[dependencies.tokio]
version = "1.33"
features = [ "macros", "rt-multi-thread", "sync", "time" ]

[dependencies.tracing-log]
version = "0.2"
default-features = false
features = [ "std", "log-tracer" ]

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = [ "ansi", "fmt", "parking_lot", "smallvec", "std" ]

[dev-dependencies]
indoc = "2.0"
mockito = "1.2"
tower = { version = "0.5", default-features = false, features = [ "util" ] }
