[package]
name = "influxdb-compute-api"
version = "2.4.11"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bytes = "1.11.0"
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
csv-async = "1.3.1"
futures-util = { version = "0.3.31", features = ["io"] }
humantime = "2.3.0"
mime = "0.3.17"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.4.1"
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
tokio-util = "0.7.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"

[dependencies.axum]
version = "0.8.8"
default-features = false
features = ["json", "http1", "tokio"]

[dependencies.chrono]
version = "0.4.42"
default-features = false
features = ["clock", "serde", "std"]

[dependencies.reqwest]
version = "0.13.1"
default-features = false
features = ["gzip", "json", "stream"]

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt-multi-thread", "sync", "time"]

[dev-dependencies]
indoc = "2.0.7"
mockito = "1.7.1"
tower = { version = "0.5.2", default-features = false, features = ["util"] }
trycmd = "0.15.11"
